--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^7.2.8",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
+    "font-awesome": "^4.7.0",
     "rxjs": "~6.3.3",
     "zone.js": "^0.8.29"
   },
