--- a/package.json
+++ b/package.json
@@ -6,37 +6,41 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build svogv && ng build",
+    "prod": "ng build svogv && ng build && npm run codedoc-docs",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "codedoc": "compodoc -p ./projects/svogv/tsconfig.lib.json --output ./docs/documentation"
+    "codedoc": "npm run codedoc-dist && npm run codedoc-docs",
+    "codedoc-dist": "compodoc -p ./projects/svogv/tsconfig.lib.json --output ./docs/documentation",
+    "codedoc-docs": "compodoc -p ./projects/svogv/tsconfig.lib.json --output ./dist/svogv-demo/documentation"
   },
   "dependencies": {
-    "@angular/animations": "^7.2.8",
-    "@angular/common": "^7.2.8",
-    "@angular/compiler": "^7.2.8",
-    "@angular/core": "^7.2.8",
-    "@angular/forms": "^7.2.8",
-    "@angular/http": "^7.2.8",
-    "@angular/platform-browser": "^7.2.8",
-    "@angular/platform-browser-dynamic": "^7.2.8",
-    "@angular/router": "^7.2.8",
+    "@angular/animations": "^7.2.9",
+    "@angular/common": "^7.2.9",
+    "@angular/compiler": "^7.2.9",
+    "@angular/core": "^7.2.9",
+    "@angular/forms": "^7.2.9",
+    "@angular/http": "^7.2.9",
+    "@angular/platform-browser": "^7.2.9",
+    "@angular/platform-browser-dynamic": "^7.2.9",
+    "@angular/router": "^7.2.9",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "font-awesome": "^4.7.0",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.4.0",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.8.9",
     "@angular-devkit/build-ng-packagr": "^0.8.9",
     "@angular/cli": "^7.3.5",
-    "@angular/compiler-cli": "^7.2.8",
-    "@angular/language-service": "^7.2.8",
+    "@angular/compiler-cli": "^7.2.9",
+    "@angular/language-service": "^7.2.9",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
+    "http-server": "^0.11.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
