--- a/projects/svogv/package.json
+++ b/projects/svogv/package.json
@@ -1,10 +1,10 @@
 {
   "name": "svogv",
-  "version": "0.6.1",
-  "description": "A decorator based approach for model driven forms and some time saving form widgets.",
+  "version": "0.7.0",
+  "description": "A decorator based approach for model driven forms, including an advanced Grid and a TreeView component.",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
+    "@angular/common": "^7.0.0",
+    "@angular/core": "^7.0.0"
   },
   "dependencies": {
     "bootstrap": "^4.0.0"
