--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "svogv-demo",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "description": "A decorator based approach for model driven forms and some time saving form widgets.",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 4200",
-    "build": "ng build svogv && ng build",
+    "build": "cp README.md projects/svogv/README.md && ng build svogv && ng build",
     "prod": "ng build svogv && ng build --prod && npm run codedoc-docs",
     "test": "ng test",
     "lint": "ng lint",
