--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svogv-demo",
-  "version": "0.7.3",
+  "version": "0.8.0",
   "description": "A decorator based approach for model driven forms and some time saving form widgets.",
   "scripts": {
     "ng": "ng",
@@ -15,46 +15,44 @@
     "codedoc-dist": "compodoc -p ./projects/svogv/tsconfig.lib.json --output ./dist/svogv-demo/documentation"
   },
   "dependencies": {
-    "@angular/animations": "^7.2.9",
-    "@angular/common": "^7.2.9",
-    "@angular/compiler": "^7.2.9",
-    "@angular/core": "^7.2.9",
-    "@angular/forms": "^7.2.9",
-    "@angular/http": "^7.2.9",
-    "@angular/platform-browser": "^7.2.9",
-    "@angular/platform-browser-dynamic": "^7.2.9",
-    "@angular/router": "^7.2.9",
+    "@angular/common": "^8.1.0",
+    "@angular/compiler": "^8.1.0",
+    "@angular/core": "^8.1.0",
+    "@angular/forms": "^8.1.0",
+    "@angular/platform-browser": "^8.1.0",
+    "@angular/platform-browser-dynamic": "^8.1.0",
+    "@angular/router": "^8.1.0",
     "bootstrap": "^4.3.1",
-    "core-js": "^2.6.5",
+    "core-js": "^3.2.1",
     "font-awesome": "^4.7.0",
-    "rxjs": "^6.4.0",
-    "zone.js": "^0.8.29"
+    "rxjs": "^6.5.0",
+    "zone.js": "^0.10.1"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^7.4.3",
-    "@angular-devkit/build-angular": "^0.8.9",
-    "@angular-devkit/build-ng-packagr": "^0.8.9",
-    "@angular/cli": "^7.3.5",
-    "@angular/compiler-cli": "^7.2.9",
-    "@angular/language-service": "^7.2.9",
-    "@types/jasmine": "^2.8.16",
+    "@angular-builders/custom-webpack": "^8.1.0",
+    "@angular-devkit/build-angular": "^0.802.1",
+    "@angular-devkit/build-ng-packagr": "^0.802.1",
+    "@angular/cli": "^8.2.1",
+    "@angular/compiler-cli": "^8.1.0",
+    "@angular/language-service": "^8.1.0",
+    "@compodoc/compodoc": "^1.1.9",
+    "@types/jasmine": "^3.4.0",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.3.0",
+    "@types/node": "^10.14.0",
+    "codelyzer": "~5.1.0",
     "http-server": "^0.11.1",
-    "jasmine-core": "~2.99.1",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.5",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^4.7.1",
-    "protractor": "^5.4.2",
-    "ts-node": "~7.0.0",
-    "tsickle": "^0.34.3",
-    "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "karma": "~4.2.0",
+    "karma-chrome-launcher": "~3.0.0",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^5.4.3",
+    "ts-node": "~8.3.0",
+    "tsickle": "^0.36.0",
+    "tslib": "^1.10.0",
+    "tslint": "~5.18.0",
+    "typescript": "~3.5.3"
   }
 }
