--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "core-js": "^3.2.1",
     "font-awesome": "^4.7.0",
     "rxjs": "^6.5.0",
-    "zone.js": "^0.10.1"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^8.1.0",
