--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.5.3",
     "core-js": "^3.8.0",
     "font-awesome": "^4.7.0",
+    "ngx-highlightjs": "^4.1.3",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.3",
     "zone.js": "~0.11.3"
@@ -54,5 +55,8 @@
     "ts-node": "~9.0.0",
     "tslint": "~6.1.3",
     "typescript": "~4.0.0"
+  },
+  "angularCompilerOptions": {
+    "enableIvy": true
   }
 }
